Token autentifucation and PHP response change

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_APP_VERSION=${npm_package_version}
+NEXT_PUBLIC_APP_VERSION=${npm_package_version} #Production
 NEXT_BASEPATH='/rentify'
 NEXT_PUBLIC_API_URL=https://agenciagelattina.com/rentify/api
 NEXT_FOLDERS_PATH=https://agenciagelattina.com/rentify/assets/folders
