--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_APP_VERSION=${npm_package_version} #Production
-NEXT_BASEPATH='/rentify/dev'
+NEXT_PUBLIC_APP_VERSION=${npm_package_version} #Test
+NEXT_BASEPATH='/rentify/test'
 NEXT_PUBLIC_API_URL=https://agenciagelattina.com/$NEXT_BASEPATH/api
 NEXT_FOLDERS_PATH=https://agenciagelattina.com/$NEXT_BASEPATH/assets/folders
