--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_APP_VERSION=${npm_package_version} #Development
+NEXT_PUBLIC_APP_VERSION=Development - V${npm_package_version}
 NEXT_BASEPATH=''
 NEXT_PUBLIC_API_URL=https://agenciagelattina.com/rentify/dev/api
 NEXT_FOLDERS_PATH=https://agenciagelattina.com/rentify/dev/assets/folders
