--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rentify",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.3.1",
-    "@mui/lab": "^5.0.0-alpha.140",
-    "@mui/material": "^5.14.2",
-    "@mui/x-date-pickers": "^6.16.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/lab": "^6.0.0-beta.21",
+    "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@phoxer/react-components": "^1.2.1",
-    "date-fns": "^2.30.0",
-    "next": "13.4.7",
-    "ramda": "^0.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-imask": "^7.1.3",
-    "react-number-format": "^5.3.1"
+    "date-fns": "^4.1.0",
+    "next": "15.1.2",
+    "ramda": "^0.30.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-imask": "^7.6.1",
+    "react-number-format": "^5.4.3"
   },
   "devDependencies": {
-    "@types/node": "20.3.2",
-    "@types/ramda": "^0.29.5",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@types/date-fns": "^2.6.0",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
-    "typescript": "5.1.6",
-    "yup": "^1.2.0"
+    "@types/node": "22.10.2",
+    "@types/ramda": "^0.30.1",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.3",
+    "typescript": "5.7.2",
+    "yup": "^1.6.1"
   }
 }
